--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
-title: Zeina Roz # your name (or website title) here
+title: Vincen Dailey # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  It;s almost christmas 
-  I want some pizza  <br><br>
+  Data Driven Restaurant Manager
+  Hello
+  <br><br>
+  
   <a href="https://www.linkedin.com/in/averyjsmith/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
