--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 title: Vincen Dailey # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Data Driven Restaurant Manager
-  Hello
+  Data Driven Manager
   <br><br>
-  
+  Fitness • Travel • Snowboarding • Fishing
+  <br><br>
+  New fiancé looking to start a family for my soulmate and my dog!
   <a href="https://www.linkedin.com/in/averyjsmith/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
