--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Vincen Dailey # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/Linkedin.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Driven Manager
   <br><br>
