--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   Fitness • Travel • Snowboarding • Fishing
   <br><br>
   New fiancé looking to start a family for my soulmate and my dog!
-  <a href="https://www.linkedin.com/in/averyjsmith/">View My LinkedIn Profile</a> 
+  <br><br>
+  <a href="https://www.linkedin.com/in/vincen-dailey/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
