--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Fitness • Travel • Snowboarding • Fishing
   <br><br>
-  New fiancé looking to start a family for my soulmate and my dog!
+  Newly engaged looking to start a life with my fiancée and my dog!
   <br><br>
   <a href="https://www.linkedin.com/in/vincen-dailey/">View My LinkedIn Profile</a> 
   
